# Pulso

./: .gitignore  Cargo.toml  README.md  build.rs  install.sh
data/: br.com.w3ti.Pulso.desktop  resources.gresource.xml  style.css
data/glib-2.0/schemas/: br.com.w3ti.Pulso.gschema.xml
data/ui/: inspector.ui  preferences.ui  presenter.ui  toolbar.ui  window.ui
po/: pt_BR.po  pulso.pot
src/: application.rs  main.rs  preferences.rs  window.rs
src/canvas/: hit.rs  mod.rs  render.rs  stage.rs  text_overlay.rs
src/io/: export_pdf.rs  mod.rs  pulso_file.rs  recovery.rs
src/model/: commands.rs  document.rs  mod.rs  undo.rs
src/panels/: inspector.rs  mod.rs  notes.rs  slide_panel.rs
src/show/: mod.rs  presenter_window.rs  show_window.rs
tests/: roundtrip.rs
