[package]
name = "pulso"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Editor de apresentações desktop"
build = "build.rs"

[dependencies]
adw = { package = "libadwaita", version = "0.8", features = ["v1_7"] }
gtk = { package = "gtk4", version = "0.10", features = ["v4_18"] }
glib = "0.21"
gio = "0.21"
cairo-rs = { version = "0.21", features = ["pdf"] }
pango = "0.21"
pangocairo = "0.21"
gdk-pixbuf = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = { version = "4", default-features = false, features = ["deflate"] }
gettext-rs = { version = "0.7", features = ["gettext-system"] }
sha2 = "0.10"
nanoid = "0.4"
anyhow = "1"
dirs = "6"

[build-dependencies]
glib-build-tools = "0.21"

[dev-dependencies]
tempfile = "3"
